# a2ui-github

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md  SPEC.md  eslint.config.mjs  package.json  skills-lock.json  tsconfig.base.json
.claude/: settings.json
_dev/: TODO.md
adapter-template/: CLAUDE.md  README.md  SPEC.md  eslint.config.mjs  fill.mjs  package.json  smoke-test.mjs
adapter-template/agent/: README.md  pyproject.toml
adapter-template/agent/deterministic_agent/: __main__.py  catalog.py  executor.py  responses.py  server.py
adapter-template/agent/deterministic_agent/fixtures/: README.md
adapter-template/agent/tests/: helpers.py  test_catalog.py  test_executor.py  test_server.py
agent/: .env.example  README.md  pyproject.toml
agent/catalog_common/: __init__.py
agent/deterministic_agent/: __main__.py  catalog.py  executor.py  responses.py  server.py
agent/deterministic_agent/fixtures/: approve.json  cd-cancel-delete.json  cd-confirm-delete.json  change.json  confirm-delete.json  copy.json  create-label.json  delete.json  dialog-close.json  issue-label-remove.json  panel-close.json  panel-open.json  panel-toggle.json  pin.json  popover-dismiss.json  radiogroup-select.json  remove.json  retry-subtree.json  save-changes.json  save.json  search.json  select-item.json  select.json  submit.json  toggle.json  token-remove.json  underline-nav-select.json
agent/knowledge/: brand-guidance.md
agent/knowledge/examples/: comment-compose-form.json  issue-detail.json  issue-triage-list.json  review-queue-status-list.json
agent/llm_agent/: __main__.py  agent.py  catalog.py  executor.py  knowledge.py  prompt.py  responder.py  server.py  tools.py
agent/llm_agent/fixtures/: pr-detail.json  pr-list.json
agent/tests/: helpers.py  test_catalog.py  test_catalog_common.py  test_conformance.py  test_executor.py  test_knowledge_examples.py  test_llm_agent.py  test_llm_catalog.py  test_llm_executor.py  test_llm_prompt.py  test_llm_server.py  test_llm_tools.py  test_responses.py  test_server.py  test_smoke.py
agent/tests/golden/: llm_system_prompt.skeleton.txt
client/: README.md  dev.html  examples.html  index.html  package.json  (+3 more)
(+1534 files in other folders)
