[project]
name = "a2ui-github-agent"
version = "0.1.0"
description = "Deterministic A2A server for the a2ui-github Phase 2 slice (and a permanent token-free local-test harness)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "a2ui-agent-sdk",
    "a2a-sdk[http-server]>=0.3.0,<0.4.0",
    "uvicorn>=0.40.0",
    "click>=8.1.8",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
